--- a/trabalho_final_de_api/views/pagina_contato.handlebars
+++ b/trabalho_final_de_api/views/pagina_contato.handlebars
@@ -5,7 +5,7 @@
 				<h1>ADALTOS BARBER</h1>
 				<ul>
 					<li><a href="/">DESLOGAR</a></li>
-					<li><a href="">PREÇOS</a></li>
+					<li><a href="#precos">PREÇOS</a></li>
 				</ul>
 				
 				
@@ -43,7 +43,15 @@
 			<input class="dt" type="datetime-local" id="escolha">
 		</form>
 		<button class="agenda" onclick="agendar()">AGENDAR HORARIO</button>
+		<h2 class="titulo">PREÇOS</h2>
 		</div>
+		<div id="precos">
+		<div class="cabelo"><p class="precocabelo">CABELO</p> <p class="money">25,00R$</p></div>
+		<div class="barba"><p class="precobarba">BARBA</p> <p class="money">20,00R$</p></div>
+		<div class="cabeloebarba"><p class="precocabelobarba">CABELO E BARBA</p> <p class="money">35,00R$</p></div>
+		</div>
+		
+
 
 
 		
